@@ -34,7 +34,8 @@ static string const key_option("key");
 app_state::app_state() 
   : branch_name(""), db(""), stdhooks(true), rcfiles(true), diffs(false),
     no_merges(false), set_default(false), verbose(false), search_root("/"),
-    depth(-1), last(-1), diff_format(unified_diff), diff_args_provided(false)
+    depth(-1), last(-1), diff_format(unified_diff), diff_args_provided(false),
+    use_lca(false)
 {
   db.set_app(this);
 }
