@@ -65,6 +65,7 @@ struct poptOption coptions[] =
     {"context", 0, POPT_ARG_NONE, NULL, OPT_CONTEXT_DIFF, "Use context diff format", NULL},
     {"external", 0, POPT_ARG_NONE, NULL, OPT_EXTERNAL_DIFF, "Use external diff hook for generating diffs", NULL},
     {"diff-args", 0, POPT_ARG_STRING, &argstr, OPT_EXTERNAL_DIFF_ARGS, "Argument to pass external diff hook", NULL},
+    {"lca", 0, POPT_ARG_NONE, NULL, OPT_LCA, "Use least common ancestor as ancestor for merge", NULL},
     { NULL, 0, 0, NULL, 0, NULL, NULL }
   };
 
@@ -432,6 +433,10 @@ cpp_main(int argc, char ** argv)
               
             case OPT_EXTERNAL_DIFF_ARGS:
               app.set_diff_args(utf8(string(argstr)));
+              break;
+
+            case OPT_LCA:
+              app.use_lca = true;
               break;
 
             case OPT_HELP:
