@@ -41,3 +41,4 @@
 #define OPT_CONTEXT_DIFF 32
 #define OPT_EXTERNAL_DIFF 33
 #define OPT_EXTERNAL_DIFF_ARGS 34
+#define OPT_LCA 35
