@@ -682,3 +682,4 @@ m4_include(tests/t_annotate_no_rev.at)
 m4_include(tests/t_merge_add_rename_add.at)
 m4_include(tests/t_update_branch.at)
 m4_include(tests/t_commit_cancelled.at)
+m4_include(tests/t_merge_lca.at)
